--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="img/logo.png">
+    <link rel="stylesheet" href="css/style.css">
     <title>Toboolist</title>
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <main>
+        <header class="main-header">
+            <img src="img/logo-copia.png" alt="logo" class="logo">
+            <h1>Toboolist</h1>
+        </header>
+        <div class="container">
+            <section class="main-section">
+
+            </section>
+        </div>
+    </main>
 </body>
 </html>
