added main skeleton

--- a/index.html
+++ b/index.html
@@ -10,18 +10,41 @@
 </head>
 <body>
     <header>
-
+        <img src="img/logo-copia.png" alt="logo" class="logo">
+        <h1>Toboolist</h1>
     </header>
-    <main>
-        <header class="main-header">
-            <img src="img/logo-copia.png" alt="logo" class="logo">
-            <h1>Toboolist</h1>
-        </header>
-        <div class="container">
-            <section class="main-section">
 
+    <div class="container">
+
+        <main>
+            <section class="main-nav">
+                <button class="btn-blue">Add Task</button>
+                <button>Add Section</button>
             </section>
-        </div>
-    </main>
+
+            <div class="separator"></div>
+
+            <section class="main-section">
+                <ul class="new-task">
+                    <li><h2>New Task</h2></li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                </ul>
+                <ul class="today">
+                    <li><h2>Today</h2></li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                </ul>
+                <ul class="upcoming">
+                    <li><h2>Upcoming</h2></li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                </ul>
+            </section>
+        </main>
+    </div>
 </body>
 </html>
