--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="img/logo-copia.png" alt="logo" class="logo">
+        <img src="img/logo-copia.png" alt="logo" class="logo cursor">
         <h1>Toboolist</h1>
     </header>
 
@@ -18,30 +18,76 @@
 
         <main>
             <section class="main-nav">
-                <button class="btn-blue">Add Task</button>
-                <button>Add Section</button>
+                <button class="btn-blue cursor">Add Task</button>
+                <button class="cursor">Add Section</button>
             </section>
 
             <div class="separator"></div>
 
             <section class="main-section">
                 <ul class="new-task">
-                    <li><h2>New Task</h2></li>
-                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li class="cursor">
+                        <span class="ul-tri">&#x23F7;</span>
+                        <h2>New Task</h2>
+                    </li>
+                    <li>
+                        <span class="ul-symbol symbol-green">&#x2713;</span>
+                        <span>Quarterly Newsletter</span>
+                        <span class="tag bg-blue">Editoial</span>
+                    </li>
                 </ul>
                 <ul class="today">
-                    <li><h2>Today</h2></li>
-                    <li>Lorem ipsum dolor sit amet.</li>
-                    <li>Lorem ipsum dolor sit amet.</li>
-                    <li>Lorem ipsum dolor sit amet.</li>
-                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li class="cursor">
+                        <span class="ul-tri">&#x23F7;</span>
+                        <h2>Today</h2>
+                    </li>
+                    <li>
+                        <span class="ul-symbol symbol-green">&#x2713;</span>
+                        <span>Recruiting blog post</span>
+                        <span class="tag bg-blue">Editoial</span>
+                    </li>
+                    <li>
+                        <span class="ul-symbol symbol-green">&#x2713;</span>
+                        <span>Mobile app launch</span>
+                        <span class="tag bg-purple">Q1-goals</span>
+                    </li>
+                    <li>
+                        <span class="ul-symbol symbol-red">&#x2717;</span>
+                        <span>Interview Jhon H.</span>
+                        <span class="tag bg-acqua">Recruiting</span>
+                    </li>
+                    <li>
+                        <span class="ul-symbol symbol-green">&#x2713;</span>
+                        <span>Summit update to mobile storefronts</span>
+                        <span class="tag bg-orange">Mobile</span>
+                    </li>
                 </ul>
                 <ul class="upcoming">
-                    <li><h2>Upcoming</h2></li>
-                    <li>Lorem ipsum dolor sit amet.</li>
-                    <li>Lorem ipsum dolor sit amet.</li>
-                    <li>Lorem ipsum dolor sit amet.</li>
-                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li class="cursor">
+                        <span class="ul-tri">&#x23F7;</span>
+                        <h2>Upcoming</h2>
+                    </li>
+                    <li>
+                        <span class="ul-symbol symbol-red">&#x2717;</span>
+                        <span>Schedule Meeting with Alex</span>
+                        <span class="tag bg-acqua">Recruiting</span>
+                    </li>
+                    <li>
+                        <span class="ul-symbol symbol-green">&#x2713;</span>
+                        <span>Homepage refresh</span>
+                        <span class="tag bg-pink">Website</span>
+                    </li>
+                    <li>
+                        <span class="ul-symbol symbol-red">&#x2717;</span>
+                        <span>Onboard new Sales team members</span>
+                        <span class="tag bg-green">Sales</span>
+                    </li>
+                    <li>
+                        <span class="ul-symbol symbol-green">&#x2713;</span>
+                        <span>Review editorial character</span>
+                        <span class="tag bg-orange">Editorial</span>
+                    </li>
+                    
                 </ul>
             </section>
         </main>
